third_party/blink/renderer/core/workers/threaded_worklet_messaging_proxy.cc
@@ -63,7 +63,10 @@ void ThreadedWorkletMessagingProxy::Initialize(
           OriginTrialContext::GetTokens(document).get(),
           base::UnguessableToken::Create(),
           std::make_unique<WorkerSettings>(document->GetSettings()),
-          kV8CacheOptionsDefault, module_responses_map);
+          kV8CacheOptionsDefault, module_responses_map,
+          service_manager::mojom::blink::InterfaceProviderPtrInfo(),
+          BeginFrameProviderParams(), nullptr /* parent_feature_policy */,
+          document->GetAgentClusterID());
 
   // Worklets share the pre-initialized backing thread so that we don't have to
   // specify the backing thread startup data.
